# Net-Tex-Demo

./: AGENTS.md  CMakeLists.txt  run.sh
shaders/: julia.frag  standard.vert
src/: main.cpp
videoPipe/: DEVELOPER.md  NDI-Notes.md  NDISimpleTest.cpp  NDIVideoReceiverApp.cpp  planning.md
videoPipe/examples/: NDISimpleApp.cpp
videoPipe/ndi_wrapping/: CMakeLists.txt
videoPipe/ndi_wrapping/examples/: NDIReceiveTest.cpp  NDISenderTest.cpp
videoPipe/ndi_wrapping/include/al_ext/ndi/: al_NDIReceiver.hpp  al_NDISender.hpp
videoPipe/ndi_wrapping/src/: al_NDIReceiver.cpp  al_NDISender.cpp
